[package]
name = "dustmw"
version = "0.1.0"
edition = "2021"

[dependencies]
dustcfg = { path = "../dustcfg" }
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["full"] }
futures = "0.3.26"
bytes = "1.4.0"
serde = "1.0.158"
tokio-serde = { version = "0.8.0", features = ["json"] }
serde_json = { version = "1.0.94" }
